update link css

--- a/article/writeup-bsidestlv2019.html
+++ b/article/writeup-bsidestlv2019.html
@@ -18,7 +18,7 @@
     <!-- title -->
     <title>Hello World</title>
     <!-- styles -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="http://sohainewbie.github.io/assets/css/style.css">
 
     <style type="text/css">
         .code-container{
