--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <th>Author</th>
         <th>Category</th>
       </tr>
-      <tr><td>1</td><td><a href="article/writeup-bsidestlv2019.html"><b>[ Writeup bsidestlv2019 ]</b></a></td><td></td><td>2019-07-29 10:08:49</td><td>sohainewbie</td><td>ctf</td></tr>
+      <tr><td>1</td><td><a href="article/writeup-single-special-flare-on-level-for-bhusa2019.html"><b>[ Writeup Single Special FLARE-ON Level for BHUSA2019 ]</b></a></td><td></td><td>2019-08-09 05:10:49</td><td>sohainewbie</td><td>ctf</td></tr><tr><td>2</td><td><a href="article/writeup-bsidestlv2019.html"><b>[ Writeup bsidestlv2019 ]</b></a></td><td></td><td>2019-07-29 10:08:49</td><td>sohainewbie</td><td>ctf</td></tr>
     </table>
   </div>
 
