--- a/article/writeup-bsidestlv2019-web-pacman-challenges.html
+++ b/article/writeup-bsidestlv2019-web-pacman-challenges.html
@@ -154,7 +154,7 @@
             </pre>
             </div>
 
-            <img src="../images/bsidestlv2019-packman/3.png" style="width: 862px;height: 95px;">
+            <img src="../images/bsidestlv2019-packman/3.png" style="width: 862px;>
 
             output <span>eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc0FkbWluIjp0cnVlLCJpYXQiOjE1NjAyNzkzNzJ9.-laaimCkf8gJnaCO7ztF_YMc0Xlsq3xVU53oN4RuH24</span>
 
