--- a/article/reversing-liquidityfrontrunnerbots.html
+++ b/article/reversing-liquidityfrontrunnerbots.html
@@ -163,11 +163,11 @@
             jika length nya kurang dari 5 maka akan dilakukan penambahan digit, 
             misal res = <span>['4', 'e' ]</span> maka nantinya menjadi <span>['4', 'e', '0', '0', '0' ]</span>
 
-            balik ke fungsi <span>callMempool()</span>
+            <span>3 .</span> <font color=yellow>mempool</font> di ekekusi pada urutan ke 3, <span>mempool("x", checkLiquidity(<font color=red>getMemPoolOffset()</font>));</span>
+
             <img src="../images/reversing-liquiditybot/10.png" style="width: 862px">
 
-            Setelah kita mengetahui isi dari fungsi <span>checkLiquidity</span> yaitu <font color=red>4ec3e</font>, 
-            kemudian check fungsi <span>mempool</span>
+            Setelah kita mengetahui isi dari fungsi <span>checkLiquidity</span> yaitu <font color=red>4ec3e</font>, kemudian check fungsi <span>mempool</span>
             
             <img src="../images/reversing-liquiditybot/11.png" style="width: 862px">
 
